<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#A39943">
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Result"
        tools:layout_editor_absoluteX="135dp"
        tools:layout_editor_absoluteY="301dp"
        android:layout_marginTop="10dp"
        android:textSize="30sp"
        android:textColor="@color/black"/>


    <EditText
        android:id="@+id/editTextText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/First"
        tools:layout_editor_absoluteX="70dp"
        tools:layout_editor_absoluteY="115dp"
        android:autofillHints="name"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/editTextText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/Second"
        tools:layout_editor_absoluteX="77dp"
        tools:layout_editor_absoluteY="205dp"
        android:autofillHints="name"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"/>

        <Button
        android:id="@+id/button"
        android:layout_width="142dp"
        android:layout_height="wrap_content"
        android:text="@string/Sum"
            android:layout_marginTop="10dp"

            />
    <Button
        android:id="@+id/button2"
        android:layout_width="142dp"
        android:layout_height="wrap_content"
        android:text="@string/sub"
        android:layout_marginTop="10dp"
        />
    <Button
        android:id="@+id/button3"
        android:layout_width="142dp"
        android:layout_height="wrap_content"
        android:text="@string/Multi"
        android:layout_marginTop="10dp"
        />
    <Button
        android:id="@+id/button4"
        android:layout_width="142dp"
        android:layout_height="wrap_content"
        android:text="@string/divide"
        android:layout_marginTop="10dp"
        />
    <Button
        android:id="@+id/button5"
        android:layout_width="142dp"
        android:layout_height="wrap_content"
        android:text="@string/Mod"
        android:layout_marginTop="10dp"
        />




</LinearLayout>